fix: :bug: 修复属性弹窗的样式

--- a/style/dialog/export.scss
+++ b/style/dialog/export.scss
@@ -12,7 +12,8 @@
         }
     }
     .b3-dialog__close {
-        @include small.close();
+        display: none;
+        // @include small.close();
     }
     .b3-dialog__action {
         @include snippets.medium-actions();
