--- a/style/dialog/snippets.scss
+++ b/style/dialog/snippets.scss
@@ -1,44 +1,41 @@
-@use "sass:math";
-@use "../common" as *;
-@use "history";
-@use "small";
+@use 'sass:math';
+@use '../common' as *;
+@use 'history';
+@use 'small';
 
 @mixin medium-actions {
-  @include history.bar();
-  @include small.actions();
-  .fn__space {
-    width: 16px;
-  }
-  .b3-button {
-    width: 120px;
-  }
+    @include history.bar();
+    @include small.actions();
+    .fn__space {
+        width: 16px;
+    }
+    .b3-button {
+        width: 120px;
+    }
 }
 
 .b3-dialog__container:has(#addCodeSnippetCSS) {
-  width: 50vw !important;
-  div[style*="60vh"] {
-    // 顶部导航栏
-    .layout-tab-bar {
-      @include history.dialog-tabs();
+    width: 50vw !important;
+    div[style*='60vh'] {
+        // 顶部导航栏
+        .layout-tab-bar {
+            @include history.dialog-tabs();
+        }
+
+        textarea.b3-text-field {
+            height: get($component-size, 'base') * 6;
+        }
+    }
+    .block__icon {
+        margin-top: math.div(get($component-size, 'base') - get($component-size, 'small'), 2);
     }
 
-    textarea.b3-text-field {
-      height: get($component-size, "base") * 6;
+    .b3-dialog__close {
+        // @include small.close();
+        display: none;
     }
-  }
-  .block__icon {
-    margin-top: math.div(
-      get($component-size, "base") - get($component-size, "small"),
-      2
-    );
-  }
 
-  .b3-dialog__close {
-    @include small.close();
-    z-index: 2;
-  }
-
-  .b3-dialog__action {
-    @include medium-actions();
-  }
+    .b3-dialog__action {
+        @include medium-actions();
+    }
 }
