docs: :memo: 更新Readme，增加英文Readme及集市icon

--- a/style/dialog/bazaar.scss
+++ b/style/dialog/bazaar.scss
@@ -35,7 +35,7 @@
 #configBazaarDownloaded {
     display: flex;
     flex-wrap: wrap;
-    [style*='837px'] {
+    [style*='px'] {
         width: 100%;
     }
     &:has(.b3-list--empty) {
