--- a/style/protyle/block/table.scss
+++ b/style/protyle/block/table.scss
@@ -6,7 +6,7 @@
     background-color: get($bg, 'page', 1);
     th,
     td {
-        white-space: nowrap;
+        // white-space: nowrap;
         background-color: get($bg, 'page', 1);
     }
 }
